--- a/styles.css
+++ b/styles.css
@@ -1,38 +1,17 @@
 body {
-    margin: 100px;
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
-#myInput {
-    width: 100%;
-    font-size: 16px;
+#search {
+    width: 70vw;
+    font-size: 18px;
+    letter-spacing: 0.1px;
     padding: 12px 20px 12px 40px;
     border: 1px solid #ddd;
     margin-bottom: 12px;
-}
-
-#myUL {
-    list-style-type: none;
-    padding: 0;
-    margin: 0;
-}
-
-#myUL li a {
-    border: 1px solid #ddd;
-    margin-top: -1px;
-    /* Prevent double borders */
-    background-color: #f6f6f6;
-    padding: 12px;
-    text-decoration: none;
-    font-size: 18px;
-    color: black;
-    display: block
-}
-
-#myUL li a:hover:not(.header) {
-    background-color: #eee;
+    margin: 40px;
 }
 
 .cards {
